--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,36 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// Define versions in a single place
+ext {
+    // Sdk and tools
+    minSdkVersion = 16
+    targetSdkVersion = 27
+    compileSdkVersion = 27
+    buildToolsVersion = '26.0.3'
+
+    // App dependencies
+    supportLibraryVersion = '27.1.1'
+    gsonVersion = '2.8.0'
+
+    rx2FastAndroidNetworking = '1.0.0'
+
+    dagger2Version = '2.11'
+    rxjava2Version = '2.0.6'
+    rxandroidVersion = '2.0.1'
+    placeholderviewVersion = '0.6.1'
+    debugDBVersion = '1.0.0'
+    timberVersion = '4.5.1'
+    lifecycle = '1.1.1'
+
+    //Test dependencies
+    junitVersion = '4.12'
+    espressoVersion = '3.0.2'
+    mockitoVersion = '2.11.0'
+    runner='1.0.2'
+    //layout
+    constraintlayout='1.1.0'
+    lombok='1.16.20'
+    exoPlayer='r2.5.2'
+}
